<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/store"
        android:icon="@drawable/plutonem_cdetail_store_black_24dp"
        android:title="@string/store"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/customer_service"
        android:icon="@drawable/plutonem_cdetail_customer_service_black_24dp"
        android:title="@string/customer_service"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/add_to_shopping_cart"
        android:icon="@drawable/plutonem_cdetail_add_shopping_cart_black_24dp"
        android:title="@string/add_to_shopping_cart"
        app:showAsAction="ifRoom" />

    <!--<item-->
        <!--android:id="@+id/purchase_now"-->
        <!--android:icon="@drawable/ic_notifications_black_24dp"-->
        <!--android:title="@string/purchase_now"-->
        <!--app:showAsAction="ifRoom" />-->

    <!--<item-->
        <!--android:id="@+id/app_bar_settings"-->
        <!--android:title="@string/action_settings"-->
        <!--app:showAsAction="ifRoom" />-->
</menu>
