<?xml version="1.0" encoding="utf-8"?><!--
~ Copyright (C) 2019 The Plutonem Application Project
~
~ Licensed under the Apache License, Version 2.0 (the "License");
~ you may not use this file except in compliance with the License.
~ You may obtain a copy of the License at
~
~      http://www.apache.org/licenses/LICENSE-2.0
~
~ Unless required by applicable law or agreed to in writing, software
~ distributed under the License is distributed on an "AS IS" BASIS,
~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
~ See the License for the specific language governing permissions and
~ limitations under the License.
-->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="hasDeliveryAddress"
            type="boolean" />

    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:isGone="@{!hasDeliveryAddress}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|enterAlways" />

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingStart="@dimen/keyline_4"
                android:paddingLeft="@dimen/keyline_4"
                android:paddingEnd="@dimen/keyline_5"
                android:paddingRight="@dimen/keyline_5"
                android:paddingBottom="@dimen/keyline_5">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/total_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/subtotal"
                    android:layout_toLeftOf="@+id/subtotal"
                    android:alpha="?alphaEmphasisMedium"
                    android:paddingTop="@dimen/keyline_0"
                    android:text="@string/total_count_comma"
                    android:textAppearance="?textAppearanceBody2" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/subtotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/keyline_1"
                    android:layout_marginLeft="@dimen/keyline_1"
                    android:layout_toStartOf="@+id/sum"
                    android:layout_toLeftOf="@+id/sum"
                    android:alpha="?alphaEmphasisMedium"
                    android:text="@string/subtotal"
                    android:textAppearance="@style/textAppearanceHeadline6.medium" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/sum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/keyline_0"
                    android:layout_marginLeft="@dimen/keyline_0"
                    android:layout_toStartOf="@+id/material_button"
                    android:layout_toLeftOf="@+id/material_button"
                    android:alpha="?alphaEmphasisHigh"
                    android:text="@string/sum"
                    android:textAppearance="@style/textAppearanceHeadline6.medium" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/material_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/keyline_4"
                    android:layout_marginLeft="@dimen/keyline_4"
                    android:text="@string/submit_order"
                    android:textAppearance="@style/textAppearanceHeadline6.medium" />

            </RelativeLayout>


        </com.google.android.material.bottomappbar.BottomAppBar>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>

    <!--        <com.google.android.material.bottomappbar.BottomAppBar-->
    <!--            android:id="@+id/plutonem_corder_bottomappbar"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_gravity="bottom"-->

    <!--            app:fabAlignmentMode="end" />-->

    <!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
    <!--            android:id="@+id/plutonem_corder_floatingactionbutton_shop"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:src="@drawable/plutonem_corder_check_black_24dp"-->

    <!--            app:layout_anchor="@id/plutonem_corder_bottomappbar" />-->